WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279123
Ruby block style not inherited to anonymous ruby child on dynamic change
https://bugs.webkit.org/show_bug.cgi?id=279123
Summary
Ruby block style not inherited to anonymous ruby child on dynamic change
Antti Koivisto
Reported
2024-09-04 05:06:06 PDT
Propagation failure
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-04 05:06:23 PDT
Comment hidden (obsolete)
<
rdar://problem/135265776
>
Antti Koivisto
Comment 2
2024-09-04 05:22:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33116
Antti Koivisto
Comment 3
2024-09-04 05:27:00 PDT
rdar://134442508
EWS
Comment 4
2024-09-04 08:20:36 PDT
Committed
283152@main
(cedbe2855b3e): <
https://commits.webkit.org/283152@main
> Reviewed commits have been landed. Closing PR #33116 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug