Ruby block style not inherited to anonymous ruby child on dynamic change https://bugs.webkit.org/show_bug.cgi?id=279123 rdar://134442508

Reviewed by Alan Baradlay.

* LayoutTests/fast/ruby/ruby-block-style-propagation-expected.html: Added.
* LayoutTests/fast/ruby/ruby-block-style-propagation.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::styleDidChange):
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::propagateStyleToAnonymousChildren):

Allow block style propagation to anonymous ruby children.

* Source/WebCore/rendering/RenderElement.h:

Canonical link: https://commits.webkit.org/283152@main